Add the 'letter' piece set from the lichess website.

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -333,6 +333,39 @@
     &.black
       background-image url('../../images/pieces/shapes/bK.svg')
 
+/* letter */
+.letter piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/letter/wP.svg')
+    &.black
+      background-image url('../../images/pieces/letter/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/letter/wB.svg')
+    &.black
+      background-image url('../../images/pieces/letter/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/letter/wN.svg')
+    &.black
+      background-image url('../../images/pieces/letter/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/letter/wR.svg')
+    &.black
+      background-image url('../../images/pieces/letter/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/letter/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/letter/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/letter/wK.svg')
+    &.black
+      background-image url('../../images/pieces/letter/bK.svg')
+
 /* chessnut */
 .chessnut piece
   &.pawn
