Improve menus UX

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -239,9 +239,11 @@ span.fa
       margin-bottom 5px
   > .score_wrapper
     text-align center
-    margin-top 0.5em
+    margin-top 15px
     > .score
       font-weight bold
+  > .mini_user_actions_wrapper
+    margin-top 10px
 
 .color-icon
   &:before
