--- a/src/styl/custom_theme.styl
+++ b/src/styl/custom_theme.styl
@@ -63,6 +63,9 @@
     &.selected
       color gold
 
+  .subHeader
+    background transparent
+
   .main_header_button.active,
   .action_bar_button.active,
   .antagonistInfos.active,
