--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -8,6 +8,11 @@
   > .fa-trophy
     margin-right 2px
 
+.main_header_button.bookmarkButton
+  padding 0 10px
+  font-size 18px
+  line-height 18px
+
 .header-subTitle
   > .swords
     padding 0 0.5em
