--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -95,6 +95,7 @@ main
   overflow hidden
   text-overflow ellipsis
   white-space nowrap
+  letter-spacing -0.5px
   &.withSub
     display flex
     flex-flow column nowrap
@@ -137,7 +138,7 @@ main
   text-overflow ellipsis
 
 .back_button
-  flex 0 1 auto
+  flex 1 1 auto
   display flex
   flex-flow row nowrap
   height headerHeight
@@ -148,7 +149,7 @@ main
   > button
     margin 0
     height headerHeight
-    padding 0 16px
+    padding 0 12px
     > .svg-icon-wrapper
       width 24px
       height 24px
@@ -162,7 +163,7 @@ main
       justify-content center
       line-height initial
     font-size 1.1rem
-    padding-right 10px
+    padding-right 2px
     padding-left 2px
     overflow hidden
     text-overflow ellipsis
