--- a/src/styl/overlay-popup.styl
+++ b/src/styl/overlay-popup.styl
@@ -69,9 +69,8 @@
 .popup_content
   height 100%
 
-.offline_actions, .player_controls, .trainingMenu, .editorMenu, .continueFromHere, .go_or_cancel, .analyse_menu, .new_offline_game, .analyse-cm
+.offline_actions, .player_controls, .trainingMenu, .editorMenu, .continueFromHere, .go_or_cancel, .analyse_menu, .new_offline_game, .analyse-cm, .mini_user_actions_wrapper
   button
-    display block
     width 100%
     margin 0
     padding 10px
