Improve user profile; provide website access for edit

--- a/src/styl/user.styl
+++ b/src/styl/user.styl
@@ -29,21 +29,23 @@ h3.fullname
   color gold
   font-weight bold
 
-.profileBio
-  margin 10px 0
-  font-style italic
-  word-wrap break-word
-
 .flag
   height 20px
   vertical-align bottom
   margin-right 2px
 
-.onlineStatus, .profile, .userStats
+.profileBio
   margin 10px 0
+  font-style italic
+  word-wrap break-word
 
-.profile, .userStats, .user-patron
+.profileSection
+  margin-top 10px
   font-size 0.90em
+
+.websiteLinks
+  > p
+    line-height 2em
 
 .perfs
   display flex
