WIP on new home

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -250,6 +250,9 @@ span.fa
     font-family "lichess"!important
     vertical-align middle
     margin-right 5px
+  &.random
+    &:before
+      content: "l"
   &.white
     &:before
       content: "J"
