--- a/src/styl/overlay-popup.styl
+++ b/src/styl/overlay-popup.styl
@@ -30,6 +30,8 @@
   button
     min-height 45px
     color textDarkGray
+  .defaultButton
+    color #fff
   > header
     text-align center
     position relative
@@ -113,7 +115,7 @@
 .popupActionWrapper
   width 100%
   text-align center
-  margin 10px 0
+  margin 1em 0
   > button.popupAction
     background transparent
     width initial
