--- a/src/styl/user.styl
+++ b/src/styl/user.styl
@@ -358,8 +358,8 @@ td.variantPerfMemo
 
 .view-container.light
   .select_games_filter
-    background-color themeBgLight
-    border-bottom 1px solid borderLightGray
+    background-color themeBgLightHeader
+    border-bottom 1px solid darken(themeBgLightHeader, 5%)
     > select
       color textLightBg
 
