More work, complete timeline

--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -291,7 +291,7 @@ comment
   .tabs-navigation.analyse
     > .tab-button
       > .chip
-        background blue
+        background goldDark
 
   .analyse-fixedBar
     background-color bglight
