Refactor follow(er-ing) screens

--- a/src/styl/user.styl
+++ b/src/styl/user.styl
@@ -318,21 +318,19 @@ td.variantPerfMemo
 .followingPlayerTitle
   display flex
   justify-content space-between
-  font-size 1.1em
-  font-weight bold
-  margin-bottom 15px
+  margin-bottom 1em
 
 .followingPlayerItem
-  margin-top 10px
+  font-size 0.9em
+  margin-top 0.5em
   > div > label
     width 100%
 
-.followingPlayerAction
-  margin-top 2px
-  padding 10px 0
-  line-height 20px
-  &.active
-    background lighten(bgdark, 5%)
+.relatedPlayerActions
+  > span
+    margin-right 0.5em
+    &:last-child
+      margin-right 0
 
 .followingListEmpty
   width 100%
