--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -140,7 +140,7 @@
 .analyse-replay
   flex 1 1 auto
   position relative
-  font-size 0.93rem
+  font-size 1.03em
   white-space normal
   line-height 1.05em
   &.rta
@@ -274,18 +274,6 @@ comment
 .analysePlayerName
   overflow hidden
   text-overflow ellipsis
-
-.variationMenuPopup
-  font-size 1rem
-  height 100px
-  top calc((100% - 100px) / 2)
-  border-radius 5px
-  text-align center
-  .variationMenu
-    display flex
-    flex-flow column nowrap
-    justify-content center
-    height 100%
 
 .view-container.light
   .tabs-navigation.analyse
