--- a/src/styl/overlay-popup.styl
+++ b/src/styl/overlay-popup.styl
@@ -107,7 +107,7 @@
     > select
       color textDarkGray
   .action
-    padding 5px 10px
+    padding 0.5em 1em
   @media only screen and (min-width 700px)
     .action
       padding 15px 20px
