--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -20,12 +20,15 @@
 
 .playTable
   flex 1 1 auto
-  position relative
-  padding 0 10px
   display flex
-  justify-content space-between
-  align-items center
+  align-items flex-end
   overflow hidden
+  > .playTable-inner
+    overflow hidden
+    display flex
+    justify-content space-between
+    align-items center
+    flex-grow 1
   &.clockOnLeft
     > .antagonistInfos
       order 2
@@ -39,10 +42,13 @@
     padding 0
     height initial
     &.crazy
-      > .antagonistInfos
+      > .playTable-inner > .antagonistInfos
         order 2
-      > .pocket
+      > .playTable-inner > .pocket
         order 1
+
+.game_board_wrapper + .playTable, .replay + .playTable
+  align-items flex-start
 
 .round-expiration
   position: absolute;
@@ -113,6 +119,7 @@
 
 .antagonistInfos
   overflow hidden
+  padding 0 2vmin
   .score
     vertical-align top
     margin-right 10px
@@ -143,11 +150,14 @@
     padding 0 10px
     .ratingAndMaterial
       height inherit
+    > .antagonistUser
+      font-size 1em
     > .clock
+      line-height 30px
       display inline-block
-      font-size 22px
+      fluid-type(20px, 30px)
       text-align left
-      margin-top 2px
+      margin-top 0.1em
       &.correspondence
         font-size 13px
   @media only screen and (min-width 600px)
@@ -176,7 +186,7 @@
 .antagonistUser
   overflow hidden
   text-overflow ellipsis
-  font-size 1.1em
+  font-size 1.2em
   white-space nowrap
   color textLightGray
   > .status
@@ -193,13 +203,12 @@
 
 .clock
   transform translateZ(0)
-  max-width 120px
   font-family Cousine
   text-align right
-  font-size 30px
-  padding 4px 5px 2px
-  line-height 1
-  color #8c8c8c
+  fluid-type(30px, 40px)
+  padding 0 2vmin
+  line-height 55px
+  color textDarkBg
   background-color #262626
   > seph
     opacity 0.7
@@ -208,7 +217,7 @@
   > tens
     font-size 0.8em
   &.running
-    background-color #505a60
+    background-color darkGreen
     color #fff
   &.berserk
     color #e35d5b
@@ -218,13 +227,14 @@
     &.running
       color #fff
   &.correspondence
-    font-size 18px
+    font-family inherit
+    fluid-type(18px, 30px)
+    white-space nowrap
+    letter-spacing -0.05em
     &.offline
       color #8c8c8c
   @media only screen and (min-width: 600px)
     font-size 35px
-    padding 8px 10px 4px
-    max-width 160px
 
 .checkCount
   font-size 0.8em
@@ -435,6 +445,7 @@
   max-height "calc((100vh - 100vw - %s - %s) / 2)" % (headerHeight footerHeight)
   background-position center
   background-size contain
+  background-repeat no-repeat
   position relative
   &:after
     content: attr(data-nb);
@@ -476,6 +487,23 @@
     background #aaa
   .antagonistUser
     color textDarkGray
+  .clock
+    color #707070
+    background-color themeBgLight
+    border-color #ccc
+    &.running
+      background-color palerGreen
+      color #000
+    &.berserk
+      border-color #dc322f
+    &.emerg
+      background-color #efaaaa
+      color textDarkGray
+    &.correspondence
+      &.offline
+        background-color themeBgLight
+        color #707070
+
 
 .view-container.transp
   .pocket
