--- a/src/styl/analyse.styl
+++ b/src/styl/analyse.styl
@@ -267,7 +267,7 @@ comment
   margin-bottom 0.5em
 
 .analyseClock
-  font-family Cousine
+  font-family 'Roboto'
   font-size 0.9em
   > span
     margin-left 5px
