--- a/src/styl/chessground.styl
+++ b/src/styl/chessground.styl
@@ -73,7 +73,7 @@ li-coords
   position absolute
   display flex
   align-items center
-  font-family Cousine
+  font-family 'Roboto'
   font-weight bold
   font-size 11px
   line-height 11px
