--- a/src/styl/offline-game.styl
+++ b/src/styl/offline-game.styl
@@ -61,7 +61,7 @@
 .clockMoves
   transform translateZ(0)
   max-width 120px
-  font-family Cousine
+  font-family 'Roboto'
   text-align right
   font-size 15px
   padding 4px 5px 2px
