--- a/src/styl/tournament.styl
+++ b/src/styl/tournament.styl
@@ -136,7 +136,7 @@
 .timeInfo
   > strong
     font-weight bold
-    font-family Cousine
+    font-family 'Roboto'
     font-size 1.2em
 
 .tournamentMiniBoard
