--- a/src/styl/user.styl
+++ b/src/styl/user.styl
@@ -105,6 +105,8 @@ h3.fullname
 #userProfileActions
   .check_container
     line-height 30px
+  > .list_item:first-letter
+    text-transform capitalize
 
 .userGamesWrapper
   flex 1 1 auto
