Improve zen mode

--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -1,3 +1,6 @@
+.zen
+  visibility hidden
+
 .header-gameTitle
   width 100%
   overflow hidden
@@ -136,10 +139,10 @@
     margin-top 2px
   &.zen
     > .antagonistUser
-      visibility hidden
+      display none
     > .ratingAndMaterial
       > .rating
-        visibility hidden
+        display none
   &.active
     background-color lighten(bgdark, 8%)
   &.crazy
