--- a/src/styl/custom_theme.styl
+++ b/src/styl/custom_theme.styl
@@ -152,6 +152,9 @@
     .select_input
       background selectBg
       color textDarkGray
+    .form-multipleChoice
+      span
+        border-color #ddd
 
   .main_header.board .chip, .chip
     color rgba(black, 0.9)
