--- a/src/styl/overlay-popup.styl
+++ b/src/styl/overlay-popup.styl
@@ -66,6 +66,9 @@
 
 .popup_content
   height 100%
+  .form-multipleChoice
+    span
+      border-color #ddd
 
 .offline_actions, .player_controls, .trainingMenu, .editorMenu, .continueFromHere, .go_or_cancel, .analyse_menu, .new_offline_game, .analyse-cm, .mini_user_actions_wrapper
   button
