--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -195,12 +195,13 @@
     font-size 1.2rem
 
 .clock
+  display flex
+  align-items center
   transform translateZ(0)
   font-family 'Roboto'
   text-align right
   fluid-type(32px, 48px)
   padding 0 2vmin
-  line-height 55px
   color textDarkBg
   background-color #262626
   > seph
