--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -144,7 +144,7 @@
     margin-right 10px
   .ratingAndMaterial
     display flex
-    margin-top 2px
+    min-height 22px
   &.zen
     > .antagonistUser
       display none
@@ -176,9 +176,6 @@
       > .clock
         line-height 20px
         fluid-type(16px, 26px)
-    .rating
-      display block
-      margin 0.2rem 0 0.5rem
 
 .antagonistUser
   overflow hidden
