Offline round player table fixes

--- a/src/styl/offline-game.styl
+++ b/src/styl/offline-game.styl
@@ -58,16 +58,15 @@
         > .fa
           margin 0
 
+.stageClock
+  display flex
+  flex-flow column nowrap
+  justify-content space-around
+
 .clockMoves
-  transform translateZ(0)
-  max-width 120px
   font-family 'Roboto'
-  text-align right
   font-size 15px
-  padding 4px 5px 2px
   line-height 1
-  color #8c8c8c
-  background-color #262626
 
 .clock.outoftime
     background-color #a00000
