Add more translations

--- a/src/ui/analyse/explorer/explorerView.styl
+++ b/src/ui/analyse/explorer/explorerView.styl
@@ -108,9 +108,10 @@ explorerHeaderBg = lighten(headerBgDark, 2%)
     text-align: center;
     opacity: 0.7;
   .message
+    margin-top 1em
     text-align: center;
-    font-size 0.9em
     font-style: italic;
+    font-size 1.2em
     > h3
       > i
         display inline
@@ -194,7 +195,7 @@ explorerHeaderBg = lighten(headerBgDark, 2%)
     border-radius: 3px;
     font-size: 0.9em;
 
-.moves.displayPieces
+.displayPieces
   .explorerMove-move
     font-family ChessSansPiratf
 
