--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -1,4 +1,9 @@
+@require 'normalize'
 @require 'reset'
+@require 'fa'
+@require 'lichess-font'
+@require 'shepherd'
+@require 'fonts'
 @require 'typo'
 @require 'colors'
 @require 'common'
