--- a/src/styl/lichess-font.styl
+++ b/src/styl/lichess-font.styl
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "lichess";
-  src: url("../fonts/lichess.ttf") format("truetype");
+  src: url("../../fonts/lichess.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
