--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -29,16 +29,21 @@
     > .antagonistInfos
       order 2
   @media only screen and (orientation: portrait) and (aspect-ratio 3/4), (orientation: portrait) and (device-aspect-ratio 3/4)
-    width 98vw
+    width 94vw
     margin 0 auto
   @media only screen and (orientation: landscape)
-    padding 0
+    padding 0.5em 0
+    flex-grow 0
     &.crazy
       > .antagonistInfos
         order 2
       > .pocket
         flex 0 0 auto
         order 1
+  @media only screen and (orientation: landscape) and (aspect-ratio 4/3), (orientation: landscape) and (device-aspect-ratio 4/3), (orientation landscape) and (device-aspect-ratio 3/4)
+    padding 1em 0
+    &:first-child
+      padding-top 0
 
 .round-expiration
   position: absolute;
@@ -66,6 +71,7 @@
       background: rgba(#dc322f, 0.8)
 
 .replay_inline
+  background headerBgDark
   flex 0 0 30px
   overflow hidden
   overflow-x auto
@@ -156,6 +162,7 @@
       > .antagonistUser
         font-size 1em
   @media only screen and (orientation landscape)
+    padding 0
     &.crazy
       > .antagonistUser
         font-size 0.7em
@@ -243,10 +250,6 @@
     background-image url(../../images/pieces/mono/Q.svg)
   .king
     background-image url(../../images/pieces/mono/K.svg)
-  @media only screen and (min-width 960px) and (orientation landscape)
-    piece
-      width 25px
-      height 25px
 
 #promotion_choice
   border 1px solid black
