Fix training layout

--- a/src/styl/training.styl
+++ b/src/styl/training.styl
@@ -50,9 +50,9 @@
   width 50%
   color: #fff;
   display flex
+  flex-flow row wrap
   justify-content center
   align-items center
-  padding 0 1em
   text-transform uppercase
   > .fa
     font-size 30px
@@ -89,8 +89,7 @@
   display flex
   justify-content center
   align-items center
-  &:first-child
-    padding 5px 0
+  padding 0.5em 0
 
 .trainingPlayer
   .player
