--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -18,33 +18,6 @@
     padding 0 0.5em
     font-size 0.8em
 
-.playTable
-  position relative
-  flex 1 1 auto
-  display flex
-  overflow hidden
-  justify-content space-between
-  align-items center
-  &.clockOnLeft
-    > .antagonistInfos
-      order 2
-  @media only screen and (orientation: portrait) and (min-width 768px) and (min-height 768px)
-    width 94vw
-    margin 0 auto
-  @media only screen and (orientation: landscape)
-    padding 0.5em 0
-    flex-grow 0
-    &.crazy
-      > .antagonistInfos
-        order 2
-      > .pocket
-        flex 0 0 auto
-        order 1
-  @media only screen and (orientation: landscape) and (min-width 768px) and (min-height 768px)
-    padding 1em 0
-    &:first-child
-      padding-top 0
-
 .round-expiration
   position: absolute;
   left: 0
@@ -87,6 +60,7 @@
   overflow hidden
   background lighten(bgdark, 3%)
   overflow-y auto
+  padding 0.2em
   @media only screen and (orientation: portrait)
     margin .5em
 
@@ -111,6 +85,46 @@
   color green
 .rp.down
   color red
+
+.playTable
+  position relative
+  flex 1 1 auto
+  display flex
+  overflow hidden
+  justify-content space-between
+  align-items center
+  &.clockOnLeft
+    > .antagonistInfos
+      order 2
+  @media only screen and (orientation: portrait) and (min-width 768px) and (min-height 768px)
+    width 94vw
+    margin 0 auto
+  @media only screen and (orientation: landscape)
+    flex 0 0 calc(30px + 2vmax + 1em)
+    padding 0.5em 0
+    &.crazy
+      > .antagonistInfos
+        order 2
+      > .pocket
+        flex 0 0 auto
+        order 1
+  @media only screen and (orientation: landscape) and (min-width 768px) and (min-height 768px)
+    flex 0 0 calc(35px + 2vmax + 1em)
+    padding 1em 0
+    &:first-child
+      padding-top 0
+      > .pocket
+        align-self flex-start
+    &:last-child
+      padding-bottom 0
+      > .pocket
+        align-self flex-end
+      > .antagonistInfos.crazy
+        order 1
+        padding-top 0
+    &.crazy
+      flex 0 0 'calc(((100vw - (100vh - %s - 6vh) - 9vh) / 5) + 30px + 2vmax + 3em)' % headerHeight
+      flex-flow row wrap
 
 .antagonistInfos
   display flex
@@ -156,18 +170,31 @@
       margin-top 0.1em
       &.correspondence
         font-size 13px
-  @media only screen and (min-width 600px)
-    &.crazy
-      > .antagonistUser
-        font-size 1em
   @media only screen and (orientation landscape)
     padding 0
+  @media only screen and (orientation landscape) and (max-width 767px) and (max-height 767px)
     &.crazy
       > .antagonistUser
         font-size 0.7em
       > .clock
         line-height 20px
         fluid-type(16px, 26px)
+  @media only screen and (orientation: landscape) and (min-width 768px) and (min-height 768px)
+    &.crazy
+      flex 1 1 auto
+      display flex
+      overflow hidden
+      justify-content space-between
+      align-items center
+      flex-flow row nowrap
+      padding 1em 0
+      > .clock
+        padding 1vmax 2vmin
+        margin-top 0
+      &:last-child
+        padding-bottom 0
+      > .antagonistUser
+        font-size 1em
 
 .antagonistUser
   overflow hidden
@@ -221,8 +248,8 @@
     letter-spacing -0.05em
     &.offline
       color #8c8c8c
-  @media only screen and (min-width: 600px)
-    font-size 35px
+  @media only screen and (orientation landscape)
+    fluid-type(20px, 35px)
 
 .checkCount
   font-size 0.8em
@@ -359,7 +386,7 @@
         &.active
           background lighten(red, 10%)
 
-.player_controls, .offline_actions, .playersTable
+.player_controls, .offline_actions
   .result
     padding 0 10px
     text-align center
@@ -455,6 +482,11 @@
     height 'calc((100vh - %s) / 8)' % headerHeight
     max-width 60px
     max-height 60px
+  @media only screen and (orientation: landscape) and (min-width 768px) and (min-height 768px)
+    width 'calc((100vw - (100vh - %s - 6vh) - 9vh) / 5)' % headerHeight
+    height 'calc((100vw - (100vh - %s - 6vh) - 9vh) / 5)' % headerHeight
+    max-width 120px
+    max-height 120px
   @media only screen and (orientation: portrait) and (min-width 768px) and (min-height 768px)
     width "calc((100vh - 100vw - 25px - %s - %s) / 2)" % (headerHeight footerHeight)
     height "calc((100vh - 100vw - 25px - %s - %s) / 2)" % (headerHeight footerHeight)
