--- a/src/styl/training.styl
+++ b/src/styl/training.styl
@@ -137,6 +137,10 @@
 
 
 #training-graph
+  width 100%
+  height 250px
+  padding 1em
+  padding-bottom 0
   .path
     fill rgba(blue, 0.5)
   .line
@@ -149,7 +153,7 @@
   flex-flow row wrap
   align-items center
   justify-content flex-start
-  margin 10px
+  margin 1em
   > button
     padding 0
     min-height initial
