--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -16,7 +16,6 @@ body
 
 .view-container
   position absolute
-  display block
   overflow hidden
   top: 0
   bottom: 0
@@ -32,20 +31,17 @@ body
     right env(safe-area-inset-right)
 
 main
-  position absolute
   height 100%
   width 100%
   background bgdark
   color textDarkBg
-  overflow hidden
-  display flex
-  flex-flow column nowrap
 
 .main_header
   padding-top: constant(safe-area-inset-top);
   padding-top: env(safe-area-inset-top);
   background headerBgDark
-  flex 0 0 headerHeight
+  width 100%
+  height headerHeight
   color headerBgDarkColor
   > nav
     height 100%
@@ -247,7 +243,7 @@ main
 
 .content
   width 100%
-  flex 1 1 auto
+  height 'calc(100% - %s)' % headerHeight
   display flex
   flex-flow column nowrap
   &.fullScreen
