--- a/src/styl/tournament.styl
+++ b/src/styl/tournament.styl
@@ -141,9 +141,7 @@
 
 .tournamentMiniBoard
   display flex
-  flex-flow column wrap
-  justify-content flex-start
-  align-items center
+  flex-flow column nowrap
   margin-bottom 1em
 
 .podium
