More home and tv improvements

--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -540,5 +540,10 @@
     display inline-block
     transform rotate(-90deg)
 
-.round-tvChannelSelector
-  font-size 1em
+.main_header-selector.round-tvChannelSelector
+  height initial
+  line-height initial
+  font-size 0.9em
+  > select
+    line-height initial
+    color transparent
